# prod-ready-ml-template

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements.txt  rm-solutions.sh  use_api.py
.devcontainer/: devcontainer.json  devcontainer_setup.sh
.github/workflows/: ci.yaml  pre-commit.yml
app/: app.py  use_api.py
cli/: cli.py
notebooks/: 01_packaging.ipynb  02_code_quality.ipynb  03_quality_checks.ipynb  04_unit_tests.ipynb  05_more_testing.ipynb  06_hackathon.ipynb  Hackathon.ipynb
notebooks/context_managers/: 01_Context_Managers.ipynb
notebooks/context_managers/answers/: ex-build1.py  ex-build2.py  ex-convert2.py
notebooks/decorators_pipelines/: Decorators.ipynb  Pandas_Pipelines.ipynb  Polars_Pipelines.ipynb
notebooks/decorators_pipelines/answers/pandas_pipelines/: pipeline-decorator.py  pipeline.py
notebooks/fastapi/: 01_Fastapi_Intro.ipynb  02_Pydantic.ipynb  04_Fastapi_Responses.ipynb
notebooks/fastapi/answers/: exercise-1.py  exercise-2.py
notebooks/generator_iterators/: 02_Generators.ipynb
notebooks/generator_iterators/answers/: ex-gen-build2.py  ex-gen-build3.py  ex-gen-use1.py  ex-gen-use2.py
notebooks/generators_iterators/answers/: ex-gen-build1.py
notebooks/oop/: 01_Classes_and_Attributes.ipynb  03_Better_Integration.ipynb  08_Protect_Private_Variables.ipynb  09_Hackathon.ipynb
review-material/: review.ipynb
review-material/solutions/: review_solutions.ipynb  trainer_notes.md
src/animal_shelter/: app.py  cli.py  data.py  features.py
src/animal_shelter/model/: predict.py  train.py
tests/: test_data.py  test_features.py  test_train.py
