[tool.poetry]
name = "animal-shelter"
version = "0.1.0"
description = ""
authors = ["David Coba <coba@cobac.eu>"]
readme = "README.md"
packages = [{include = "animal_shelter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
fastapi = "^0.103.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.0.291"
isort = "^5.12.0"
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
