[tool.poetry]
name = "animal-shelter"
version = "0.1.0"
description = ""
authors = ["Xebia Data <academy@xebia.com>"]
readme = "README.md"
packages = [
    {include = "animal_shelter", from = "src"},
    {include = "cli/cli.py"}
    ]

[tool.poetry.scripts]
animal_cli = "cli.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
fastapi = "^0.103.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
uvicorn = "^0.23.2"
pandas = "^2.2.0"
joblib = "^1.3.2"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.2.1"
isort = "^5.12.0"
mypy = "^1.7"
pre-commit = "^3.6.1"
pandas-stubs = "^2.1.4.231227"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
     ".venv",
     "slides"
     ]

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
 # "D"   # pydocstyle
]
