[project]
name = "animal-shelter"
version = "0.1.0"
description = ""
authors = [{ name = "Xebia Data", email = "academy@xebia.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "typer>=0.9.0,<0.10",
    "fastapi>=0.103.1,<0.104",
    "matplotlib>=3.8.0,<4",
    "seaborn>=0.12.2,<0.13",
    "scikit-learn>=1.3.1,<2",
    "uvicorn>=0.23.2,<0.24",
    "pandas>=2.2.0,<3",
    "joblib>=1.3.2,<2",
    "python-multipart>=0.0.9,<0.0.10",
    "pydantic>=2.7.1,<3",
    "pydantic-settings>=2.2.1,<3",
    "requests>=2.31.0,<3",
]

[uv.tool.sources]
animal_shelter = { path = "./src/animal_shelter" }

[project.scripts]
animal-cli = "animal_shelter.cli:app"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "ruff>=0.2.1,<1",
    "isort>=5.12.0,<6",
    "mypy~=1.7",
    "pre-commit>=3.6.1,<4",
    "pandas-stubs>=2.1.4.231227,<3",
    "pytest>=8.0.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
     ".venv",
     "slides",
     "notebooks",
     ]

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
 # "D",   # pydocstyle
 "N", # PEP8
 "I"
]
ignore = ["E721"]

[tool.ruff.lint.pep8-naming]
# Variables and function arguments can be called `X` instead of PEP8's `x`
extend-ignore-names = ["X"]

[tool.mypy]
ignore_missing_imports = true
